src/test/ui/mismatched_types/issue-19109.rs
trait Trait { }

fn function(t: &mut Trait) {
    t as *mut Trait
 //~^ ERROR: mismatched types
}

fn main() { }
